<resources>
    <string name="app_name">SEE</string>
    <string name="underline"><u>Skip</u></string>
    <string name="view_event"><u>View Event --></u></string>
    <string name="login_text">Not Signed Up Yet? <u>Sign Up</u></string>
    <string name="login_text_1">Already Signed Up? <u>Login</u></string>
    <string name="rating_statement">We would like your feedback to improve our application.</string>
    <string name="rating_request">What is your opinion of this application?</string>
    <string name="feedback">Please leave your feedback below:</string>
    <string name="about">Search Event Everywhere (SEE) for android offers user to search their favourite events of any location easily.
    They can view the detail information about the event and can show interest towards the event. This app also helps user to purchase online ticket.
    Payment of the online ticket can be made through Khalti. Users can also share their favourite events through any sharing apps.</string>
    <string name="facebook"><a href="https://www.facebook.com/IAmUzwal">Ujwal Parajuli</a></string>
    <string name="instagram"><a href="https://www.instagram.com/iamuzwal/">@iamuzwal</a></string>
    <string name="twitter"><a href="https://twitter.com/__ujwal">@__ujwal</a></string>


    <string-array name="categories">
        <item>Conference</item>
        <item>Training and Workshop</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Photography</item>
        <item>Social, Culture</item>
        <item>Sports</item>
        <item>Seminar, Exhibition</item>
        <item>Nightlife and Parties</item>
        <item>Music and Concerts</item>
    </string-array>
    <string-array name="search_categories">
        <item>All</item>
        <item>Conference</item>
        <item>Training and Workshop</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Photography</item>
        <item>Social, Culture</item>
        <item>Sports</item>
        <item>Seminar, Exhibition</item>
        <item>Nightlife and Parties</item>
        <item>Music and Concerts</item>
    </string-array>

    <item name="item_click_support" type="id" />
</resources>
